--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -142,8 +142,18 @@ html { -webkit-text-size-adjust: 100%; }
     display: flex;
   justify-content: center; 
   align-items: flex-start;
-  padding-top: 120px; 
+  padding-top: 100px; 
   }
+
+.logo-img {
+    width: 140px; /* smaller logo on mobile */
+    margin-bottom: 0px; /* tighter gap below logo */
+  }
+
+  .login-form {
+    margin-top: 0; /* remove extra spacing if any */
+  }
+
 }
 
 @media (min-width: 1200px) {
